Fixes for my game tests and clear test